<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp">

    <CheckBox
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:hint="@string/location"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toEndOf="@+id/done"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="52dp"
        android:hint="@string/deadline"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toEndOf="@+id/done"
        app:layout_constraintTop_toBottomOf="@id/text_location" />

    <Button
        android:id="@+id/button_delete_task"
        android:layout_width="68dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="@color/colorAccent"
        android:text="@string/delete_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>