<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_main">

    <fragment
        android:id="@+id/fragment_main"
        android:name="com.george200150.fast_task.fragments.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />

    <!--  TODO: add more fragments and the order they are accessed in here  -->
    <fragment
        android:id="@+id/fragment_task_list"
        android:name="com.george200150.fast_task.fragments.tasks.TaskListFragment"
        android:label="@string/task_list_fragment_label"
        tools:layout="@layout/fragment_task_list">

        <action
            android:id="@+id/action_TaskListFragment_to_TaskEditFragment"
            app:destination="@id/fragment_task_edit"
            app:popUpTo="@id/fragment_task_list"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/fragment_task_edit"
        android:name="com.george200150.fast_task.fragments.tasks.TaskEditFragment"
        android:label="@string/task_edit_fragment_label"
        tools:layout="@layout/fragment_task_edit">

        <action
            android:id="@+id/action_TaskEditFragment_to_TaskListFragment"
            app:destination="@id/fragment_task_list"
            app:popUpTo="@id/fragment_task_list"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>