<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp">

    <CheckBox
        android:id="@+id/view_subtask_checkBox_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_subtask_textView_description"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:hint="@string/description"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_subtask_button_delete_subtask"
        app:layout_constraintStart_toEndOf="@+id/view_subtask_checkBox_done"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_subtask_button_delete_subtask"
        android:layout_width="68dp"
        android:layout_height="36dp"
        android:layout_marginEnd="28dp"
        android:background="@color/colorAccent"
        android:text="@string/delete_subtask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>